--- a/Pages/BookList/Index.cshtml
+++ b/Pages/BookList/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@page "{id:int?}/{handler?}" @*Attribute routing*@
+﻿@*Attribute routing*@
+@page "{id:int?}/{handler?}"
 @model BookList_Razor.Pages.BookList.IndexModel
 @{
 }
@@ -7,7 +8,7 @@
 <h2>Book List</h2>
 <br />
 
-@if(Model.Message != null)
+@if (Model.Message != null)
 {
     <div class="alert alert-info alert-dismissible" role="alert">
         <button type="button" class="close" data-dismiss="alert" aria-label="close">
@@ -18,7 +19,7 @@
 }
 <a asp-page="Create" class="btn btn-primary">Create New Book</a>
 
-@if(Model.Books.Count()> 0)
+@if (Model.Books.Count() > 0)
 {
     <form method="post">
         <div>
@@ -42,18 +43,19 @@
                     </th>
                     <th></th>
                 </tr>
-                @foreach(var item in Model.Books)
+                @foreach (var item in Model.Books)
                 {
-            <tr>
-                <td>@Html.DisplayFor(m => item.ISBN)</td>
-                <td>@Html.DisplayFor(m => item.Title)</td>
-                <td>@Html.DisplayFor(m => item.Author)</td>
-                <td>@Html.DisplayFor(m => item.Price)</td>
-                <td>@Html.DisplayFor(m => item.Availability)</td>
-                <td>
-                    <button asp-page-handler="Delete" asp-route-id="@item.Id" class="btn btn-danger btn-sm">Delete</button>
-                </td>
-            </tr>
+                    <tr>
+                        <td>@Html.DisplayFor(m => item.ISBN)</td>
+                        <td>@Html.DisplayFor(m => item.Title)</td>
+                        <td>@Html.DisplayFor(m => item.Author)</td>
+                        <td>@Html.DisplayFor(m => item.Price)</td>
+                        <td>@Html.DisplayFor(m => item.Availability)</td>
+                        <td>
+                            <a asp-page="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-success">Edit</a>
+                            <button asp-page-handler="Delete" asp-route-id="@item.Id" class="btn btn-danger btn-sm">Delete</button>
+                        </td>
+                    </tr>
                 }
             </table>
         </div>
